bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:3: error: not found: value sum
  return sum(a,b)
         ^