bat.bool1.sumdouble.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  return sum(a,b)
}